--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,154 @@
+apt-clone==0.2.1
+apturl==0.5.2
+asttokens==3.0.0
+async-timeout==4.0.1
+attrs==21.2.0
 beautifulsoup4==4.12.3
-certifi==2024.8.30
+blinker==1.4
+Brlapi==0.8.3
+Brotli==1.0.9
+certifi==2020.6.20
+chardet==4.0.0
 charset-normalizer==3.4.0
+click==8.0.3
+colorama==0.4.4
+comm==0.2.2
+command-not-found==0.3
+configobj==5.0.6
+contourpy==1.3.1
+cryptography==3.4.8
+cupshelpers==1.0
+cycler==0.12.1
+dbus-python==1.2.18
+debugpy==1.8.10
+decorator==5.1.1
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+dnspython==2.1.0
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+exceptiongroup==1.2.2
+executing==2.1.0
+eyeD3==0.8.10
+filelock==3.6.0
+fonttools==4.55.3
 frozendict==2.4.6
+gattlib==0.20201113
+grpcio==1.30.2
 html5lib==1.1
-idna==3.10
+httplib2==0.20.2
+idna==3.3
+ifaddr==0.1.7
+IMDbPY==2021.4.18
+importlib-metadata==4.6.4
+ipykernel==6.29.5
+ipython==8.30.0
+jedi==0.19.2
+jeepney==0.7.1
+jsonschema==3.2.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+keyring==23.5.0
+kiwisolver==1.4.7
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+louis==3.20.0
 lxml==5.3.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+Markdown==3.3.6
+MarkupSafe==2.0.1
+matplotlib==3.9.4
+matplotlib-inline==0.1.7
+more-itertools==8.10.0
 multitasking==0.0.11
+mutagen==1.45.1
+nemo-emblems==6.0.1
+nest-asyncio==1.6.0
+netaddr==0.8.0
+netifaces==0.11.0
 numpy==2.2.0
+oauthlib==3.2.0
+onboard==1.4.1
+packaging==24.2
+PAM==0.4.2
 pandas==2.2.3
+parso==0.8.4
 peewee==3.17.8
+pexpect==4.9.0
+Pillow==9.0.1
 platformdirs==4.3.6
+prompt_toolkit==3.0.48
+protobuf==3.12.4
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+PyBluez==0.23
+pycairo==1.20.1
+pycryptodomex==3.11.0
+pycups==2.0.1
+pycurl==7.44.1
+pyelftools==0.27
+Pygments==2.18.0
+PyGObject==3.42.1
+PyICU==2.8.1
+pyinotify==0.9.6
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyparted==3.11.7
+pyRFC3339==1.1
+pyrsistent==0.18.1
+python-apt==2.4.0+ubuntu4
 python-dateutil==2.9.0.post0
+python-debian==0.1.43+ubuntu1.1
+python-dotenv==0.19.2
+python-gnupg==0.4.8
+python-magic==0.4.24
+python-xlib==0.29
 pytz==2024.2
+pyxattr==0.7.2
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==26.2.0
+qrcode==7.3.1
+reportlab==3.6.8
 requests==2.32.3
+requests-file==1.5.1
+requests-toolbelt==0.9.1
+SecretStorage==3.3.1
+setproctitle==1.2.2
 six==1.17.0
-soupsieve==2.6
+soupsieve==2.3.1
+ssh-import-id==5.11
+stack-data==0.6.3
+systemd-python==234
+texttable==1.6.4
+tinycss2==1.1.1
+tldextract==3.1.2
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.12.2
 tzdata==2024.2
-urllib3==2.2.3
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+Unidecode==1.3.3
+urllib3==1.26.5
+vboxapi==1.0
+wadllib==1.3.6
+wcwidth==0.2.13
 webencodings==0.5.1
+websocket-client==1.2.3
+websockets==9.1
+xdg==5
+xkit==0.0.0
+xlrd==1.2.0
 yfinance==0.2.50
+yt-dlp==2022.4.8
+zipp==1.0.0
